# custom-panel

./: .gitignore  IMPROVEMENTS_SUMMARY.md  LICENSE  MIGRATION.md  Makefile  OMIM_SETUP.md  README.md  codecov.yml  config.local.yml.example  config.local.yml.template  mkdocs.yml  pyproject.toml  test_report.html
.github/workflows/: ci.yml  docs.yml
custom_panel/: __init__.py  _version.py  cli.py  main.py
custom_panel/config/: default_config.yml
custom_panel/core/: __init__.py  cache_manager.py  config_manager.py  dataframe_utils.py  ensembl_client.py  ensembl_variant_client.py  format_strategies.py  gnomad_cache.py  gnomad_client.py  hgnc_client.py  hpo_client.py  io.py  output_generator.py  output_manager.py  pgs_catalog_client.py  report_generator.py  snp_harmonizer.py  utils.py
custom_panel/core/templates/: report.html.j2
custom_panel/engine/: __init__.py  annotator.py  merger.py  pipeline.py  snp_annotator.py
custom_panel/parsers_snp/: __init__.py  base_snp_parser.py  parsers_identity.py  parsers_prs.py
custom_panel/sources/: __init__.py  a_incidental_findings.py  b_manual_curation.py  g00_inhouse_panels.py  g01_panelapp.py  g02_hpo.py  g03_commercial_panels.py  g04_cosmic_germline.py  g05_clingen.py  g06_gencc.py  g07_regions.py  genomic_targeting.py  s01_cosmic.py  s02_somatic_commercial.py
custom_panel/sources_snp/: __init__.py  clinvar_snps.py  clinvar_snps_enhanced.py  clinvar_snps_vectorized.py  downloader.py  ethnicity_snps.py  identity_snps.py  manual_snps.py  pharmacogenomics_snps.py  prs_snps.py
data/: Dresden-Cancer_v1_gene-list.xlsx  Genliste_RNA_Sarkom_Panel_856.xlsx  Genliste_RNA_Solid_Tumor_886.xlsx  Leipzig-Cancer_v6_gene-list.xlsx  Variante3_Neuropatho_eigenes_Panel_gross.xlsx
data/hpo/: omim_neoplasm_genes.csv
data/manual/: genomic_targeting_flags.xlsx  manual_gene-list.xlsx
data/omim/: genemap2.txt
data/regions/: README.md  regions_list.xlsx  stripy_variant_catalog.json
data/scraped/: arup.json  blueprint_genetics.json  cegat.json  centogene.json  cgl.json  fulgent_genetics.json  genedx_comprehensive.json  invitae_comprehensive.json  mgz.json  myriad_myrisk.json  natera.json  neogenomics.json  prevention_genetics.json  uchicago.json
data/scraped/snp/: ampliseq_illumina_panel.json  eurogentest_ngs_panel.json  idt_xgen_human_id_hybridization_panel.json  idt_xgen_sample_id_amplicon_panel.json  nimagen_hest_panel.json  nimagen_hist_panel.json
data/snp/ethnicity/: ethnicity_snps.xlsx
data/snp/manual/: manual.xlsx
data/snp/prs/: BCAC_313_PRS.prs
data/submission_form/: DNA_Twist_Input_Custom_Panel_v2.4.2.xlsx  README.md
docs/: COSMIC_SETUP.md  index.md  troubleshooting.md
docs/api/: annotator.md  cli.md  ensembl_client.md  hgnc_client.md  merger.md
docs/assets/: extra.css
docs/user_guide/: configuration.md  data_sources.md  html_reports.md  installation.md  running_pipeline.md  scoring_system.md  snp_functionality.md  web_scraping.md
results/acmg/: acmg_data.csv
results/inhouse/: inhouse_data.csv
results/panelapp/: panelapp_data.csv
scrapers/: __init__.py  run_scrapers.py  run_snp_scrapers.py
scrapers/data/scraped/snp/: eurogentest_ngs_panel.json  idt_xgen_human_id_hybridization_panel.json  idt_xgen_sample_id_amplicon_panel.json  nimagen_hest_panel.json  pengelly_panel.json
scrapers/parsers/: __init__.py  base_parser.py  parse_arup.py  parse_blueprint.py  parse_cegat.py  parse_centogene.py  parse_cgl.py  parse_fulgent.py  parse_genedx.py  parse_invitae.py  parse_mayo.py  parse_mgz.py  parse_myriad.py  parse_natera.py  parse_neogenomics.py  parse_prevention.py  parse_uchicago.py
scrapers/snp_parsers/: __init__.py  base_snp_scraper.py  parse_ampliseq.py  parse_eurogentest.py  parse_idt_amplicon.py  parse_idt_hybridization.py  parse_nimagen_hest.py  parse_nimagen_hist.py  parse_pengelly.py
scripts/: clean-run.sh  coverage.sh  custom-panel-clean.sh  lint.sh  run-custom-panel.py
test_results/run_20250715_110139/01_raw_data/: 110141_raw_data_source_PanelApp.xlsx  110141_raw_data_source_PanelApp_metadata.json  110143_raw_data_source_Inhouse_Panels.xlsx  110143_raw_data_source_Inhouse_Panels_metadata.json  110144_raw_data_source_ACMG_Incidental_Findings.xlsx  110144_raw_data_source_ACMG_Incidental_Findings_metadata.json  110144_raw_data_source_Manual_Curation.xlsx  110144_raw_data_source_Manual_Curation_metadata.json
tests/: __init__.py  test_cli.py  test_cli_integration.py  test_core.py  test_engine.py  test_genomic_targeting.py  test_gnomad_cache.py  test_gnomad_client.py  test_hpo.py  test_pharmacogenomics_snps.py  test_scrapers.py  test_snp_deduplication.py  test_snp_harmonization_integration.py  test_snp_harmonizer.py  test_sources.py  test_utils.py
tests/data/scraper_fixtures/: acmg_ncbi.html  blueprint_genetics.html  fulgent_genetics.html  myriad_myrisk.html
